# HotWired-Bot

./: .azure-pipelines.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CLA-Sign.md  CLA.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  bot.py  command.sql  docker-compose.yml  flake8.cfg  install.txt  main.py  pyproject.toml  requirements.txt  runme.py  start.py  tox.ini
.github/: CODEOWNERS
assets/: AntiMalware.py  checks.py  context.py  game_variables.py  words.py
bot/: __init__.py  __main__.py  config.py  constants.py
bot/assets/: allowed_filetypes.txt  excuses.txt  filter_words.txt  nsfw_subreddit.json  questions.json  subreddit.json
bot/cogs/: anisearch.py  announcements.py  asciiart.py  birthday.py  codesandbox.py  coding.py  comics.py  commands.py  common.py  conversion.py  converters.py  disjobs.py  documentaion.py  documentation.py  dungeon.py  embeds.py  emotes.py  events.py  fact.py  facts.py  fun.py  games.py  github.py  help.py  infog.py  (+17 more)
cogs/: MalwareProtection.py  cipher.py  codesandbox.py  coding.py  comics.py  commands.py  common.py  converters.py  custom.py  embeds.py  emotes.py  events.py  fun.py  games.py  github.py  hacking.py  help.py  infog.py  latex.py  malware_protection.py  moderation.py  nasa.py  reddit.py  search.py  study.py  stuff.py  sudo.py  support.py  tools.py  translate.py  verification.py
contributors/: faholan.md  itsdrike.md
src/: __main__.py
utils/: binarycalc.py  constants.py  covidscrape.py  geolocation.py  hexcalc.py  mathscrape.py  octcalc.py  paginator.py  wolframscrape.py
(+81 files in other folders)
