[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "hotwired-discord"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
discord = "^1.0"
"discord.py" = "^1.3"
python = "^3.8"
python-dotenv = "^0.13.0"
psutil = "^5.7"
gputil = "^1.4"
tabulate = "^0.8.7"
markdownify = "^0.4.1"
stackexchange = "^0.5.0"
[tool.poetry.dev-dependencies]